--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prof. Dr. [Adınız]</title>
+    <title>Dr. Enes GUL</title>
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
     <header>
-        <h1>Prof. Dr. [Adınız]</h1>
+        <h1>Dr. Enes GUL</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,11 +21,11 @@
     <main>
         <section>
             <h2>Welcome to My Academic Page</h2>
-            <p>Brief introduction about your research interests, background, and current projects.</p>
+            <p>Brief introduction about my research interests, background, and current projects.</p>
         </section>
     </main>
     <footer>
-        <p>Contact: [Email Adresiniz]</p>
+        <p>Contact: drenesgul@gmial.com</p>
     </footer>
 </body>
 </html>
