--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Prof. Dr. [Adınız]</title>
+    <title>About - Dr. Enes GUL</title>
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
     <header>
-        <h1>Prof. Dr. [Adınız]</h1>
+        <h1>Dr. Enes GUL</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -25,7 +25,7 @@
         </section>
     </main>
     <footer>
-        <p>Contact: [Email Adresiniz]</p>
+        <p>Contact: drenesgul@gmail.com</p>
     </footer>
 </body>
 </html>
