--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
     </main>
     <footer>
-        <p>Contact: drenesgul@gmial.com</p>
+        <p>Contact: drenesgul@gmail.com</p>
     </footer>
 </body>
 </html>
