--- a/publications.html
+++ b/publications.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications - Prof. Dr. [Adınız]</title>
     <link rel="stylesheet" href="assets/styles.css">
+    <script defer src="assets/scholar.js"></script>
 </head>
 <body>
     <header>
@@ -21,11 +22,8 @@
     <main>
         <section>
             <h2>Publications</h2>
-            <ul>
-                <li>Publication 1: <i>Title of the Paper</i>, Journal Name, Year.</li>
-                <li>Publication 2: <i>Title of the Paper</i>, Journal Name, Year.</li>
-                <!-- Daha fazla yayın ekleyin -->
-            </ul>
+            <ul id="publications-list">
+           </ul>
         </section>
     </main>
     <footer>
