--- a/publications.html
+++ b/publications.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Publications - Prof. Dr. [Adınız]</title>
+    <title>Publications - Dr. Enes GUL</title>
     <link rel="stylesheet" href="assets/styles.css">
     <script defer src="assets/scholar.js"></script>
 </head>
 <body>
     <header>
-        <h1>Prof. Dr. [Adınız]</h1>
+        <h1>Dr. Enes GUL</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
