--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,7 @@
         </section>
     </main>
     <footer>
-        <p>Contact: [Email Adresiniz]</p>
+        <p>Contact: drenesgul@gmail.com</p>
     </footer>
 </body>
 </html>
